# graph

./: CMakeLists.txt  GraphFrame.cpp  GraphFrame.h  GraphPanel.cpp  GraphPanel.h  HelloWorldApp.cpp  HelloWorldApp.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  MyFunction.h  README.md
libs/: mathplot.cpp  mathplot.h
src/: MainFrame.cpp  MyFunction.cpp  MyFunction.h
